--- a/AutoComplete/index.html
+++ b/AutoComplete/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js"></script>
+
 </head>
 
 <body>
     <h1 id="number1">Hello World!</h1>
-    <input type="text" id="input1" />
-
+    <p id="input1">cool123423</p>
+    <!-- <input type="text" id="input1" /> -->
+    <script src="index.js" type="text/javascript"></script>
 </body>
 
 </html>
