--- a/advice-generator-app-main/index.html
+++ b/advice-generator-app-main/index.html
@@ -9,30 +9,22 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Hemanth Raju Frontend Mentor | Advice generator app</title>
-
+  <link rel="stylesheet" href="style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="card" id="card">
+    <div class="adviceTitle">Advice <span class="adviceId">#117</span></div>
+    <div class="advice" id="adviceText">
+      "It is easy to setup things but different for me. Little things a day consistently make you perfect someday."
+    </div>
+    <img class="extra" src="./images/pattern-divider-desktop.svg" alt="" />
+    <button class="btn">
+      <img src="./images/icon-dice.svg" alt="" />
+    </button>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
